tests/syntax/bad/testfile-parameters3-1.scala
class A { def m(x) {} }
object Main { def main(args: Array[String]) { } }
